--- a/index.html
+++ b/index.html
@@ -7,41 +7,70 @@
 <title>Little Heroes Daycare</title>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Chalkboard" rel="stylesheet">
 </head>
 
 	<body>
+		<main>
 
 		<div class="container">
-			<main>
-			<img src="images/hero-main.png">
-			</main>
+			<div class="jumbotron">
+				<img src="images/hero-main.png">
+			</div>
 		<section class="about row">
 			<div class="col-12 col-md-6">
 			<h2>About Us</h2>
-			<p>Lucas ipsum dolor sit amet mandalorians tatooine yavin skywalker mon fisto gonk padmé tusken raider wookiee. Zabrak hoth antilles naboo. Kenobi antilles kit hutt mandalorians. Wedge sidious wampa watto antilles hutt jawa. Kenobi amidala kessel mon maul jade alderaan hutt ben. Calrissian windu wookiee droid dagobah luuke. Wookiee kashyyyk sidious skywalker binks sidious. Watto jawa jango hutt sidious. Mon qui-gon moff qui-gon ahsoka jawa darth. Organa kit mace chewbacca windu fisto naboo darth moff.</p>
+			<p>Ages 6 weeks - 5 years</p>
+			<h4>Hours of Operation</h4>
+			<p>Tuesday-Thursday</p>
+			<p>7:30-5:30</p>
+			<h4>Drop in Care</h4>
+			<h4>Part Time Care</h4>
+			<h4>Mother's Day Out</h4>
+			<p>Little Heroes has been in operation since 2015. Little Heroes was a long time dream of mine that came true with the birth of my daughter. I worked for the health department and struggled to find a daycare that offered both a home environment, and a place we felt comfortable and safe leaving our most prized possession in. My husband is a Paramedic and I am a trained First Responder.  Above all, we wanted to ensure our child would be safe while away from us. This began the end of our search for child care and the start of Little Heroes Home Child Care. We are so thankful for all the little ones that have come into our lives and home, and look forward to caring for many more.</p>
+			<p><b>Child Safety</b></p>
+			<p>Child safety is our top priority here at Little Heroes. While accidents can happen anywhere, we want parents to know they have the best team caring for their loved ones.</p>
 			</div>
 			<div class="col-12 col-md-6">
 				<img src="images/alicia-sara.png">
 			</div>
 		</section>
 		<section class="pictures row">
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-5">
 			<h2>Pics from Daycare</h2>
 			</div>
-			<div class="col-12 col-md-6">
-				<img src="">
+			<div class="col-12 col-md-7">
+				<img src="images/pics-from-daycare.png">
 			</div>
 		</section>
 		<section class="calendar row">
 			<div class="col-md-6">
 			<h2>Schedule</h2>
-			<img src="images/schedule-bg.png" alt="">
+			<a href="https://calendar.google.com/calendar/embed?src=littleheroes360%40gmail.com&ctz=America%2FChicago" target="_blank">
+			<img src="images/schedule-bg.png" alt=""></a>
 			</div>
 			<div class="col-md-6">
 			<h2>Contact Us</h2>
+			<h4>Phone</h4>
+			<p>1-512-909-3322 </p>
+			<h4>Email</h4>
+			<p>Aliciapoulos360@gmail.com</p>
+			<div class="col-md-6">
+			<h3>Forms</h3>
+				<ul>
+					<li><a href="PDF/enrollmentPaperwork.docx" target="_blank">Enrollment Paperwork</a>
+					</li>
+					<li><a href="PDF/parentAgreement.pdf" target="_blank">Parent Agreement</a>
+					</li>
+					<li><a href="PDF/disciplineGuidelines.pdf" target="_blank">Discipline Form</a>
+					</li>
+					<li><a href="PDF/safeSleep.pdf" target="_blank">Safe Sleep</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 		</div>
+	</main>
 	</body>
 
 
